--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "devnote-pro",
   "version": "1.0.0",
@@ -11,21 +10,23 @@
     "dist": "npm run build && electron-builder --win"
   },
   "dependencies": {
+    "lucide-react": "^0.344.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.344.0",
-    "react-simple-code-editor": "^0.13.1",
-    "prismjs": "^1.29.0"
+    "react-simple-code-editor": "^0.13.1"
   },
   "devDependencies": {
-    "electron": "^28.0.0",
-    "electron-builder": "^24.9.1",
-    "vite": "^4.5.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "@types/prismjs": "^1.26.3"
+    "@vitejs/plugin-react": "^4.2.1",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.9.1",
+    "image-size": "^2.0.2",
+    "sharp": "^0.34.5",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.3"
   },
   "build": {
     "appId": "com.devnote.pro",
